src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: "Darker Grotesque"; /*, system-ui, sans-serif;*/
    font-weight: 500; /* Medium is default weight */
  }
  @font-face {
    font-family: "Dirtyline 36daysoftype 2022";
    font-display: swap;
    src: url(/fonts/Dirtyline-36-daysoftype/woff/Dirtyline\ 36daysoftype\ 2022.woff2)
      format("woff2");
  }
  /* @font-face {
    font-family: "Darker Grotesque";
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(/fonts/Darker_Grotesque/static/DarkerGrotesque-Regular.ttf)
      format("woff2");
  } */
  @font-face {
    font-family: "Darker Grotesque";
    font-style: normal;
    font-weight: 500;
    font-display: swap;
    src: url(/fonts/Darker_Grotesque/static/DarkerGrotesque-Medium.ttf)
      format("woff2");
  }
  @font-face {
    font-family: "Darker Grotesque";
    font-style: normal;
    font-weight: 600;
    font-display: swap;
    src: url(/fonts/Darker_Grotesque/static/DarkerGrotesque-SemiBold.ttf)
      format("woff2");
  }
  @font-face {
    font-family: "Darker Grotesque";
    font-style: normal;
    font-weight: 700;
    font-display: swap;
    src: url(/fonts/Darker_Grotesque/static/DarkerGrotesque-Bold.ttf)
      format("woff2");
  }
}

/* :root {
  --foreground-color: #000000;
  --background-color: #d6dbdc;
} */

/* Forced dark mode */
/* @media (prefers-color-scheme: dark) { */
:root {
  --foreground-rgb: #f2ebde;
  --background-rgb: #171717;
  --bg-footer: #121212;
  --bg-secondary: #1c1c1c;
  --max-width: 1440px;
  --header-max-width: 1380px;
}
/* } */

body {
  color: var(--foreground-rgb);
  background: var(--background-rgb);
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
  .text-mixed {
    text-orientation: mixed;
  }
  .writing-vertical-lr {
    writing-mode: vertical-lr;
  }
  .marker-none::marker {
    content: "";
  }
}

.loading-logo {
  --count: 14;
  --scale: 8;
  --w: 34px;
  --h: 26px;
  --width: calc(var(--w) * var(--scale));
  --height: calc(var(--h) * var(--scale));
  --bg-width: calc(var(--width) * var(--count));

  background-image: url(/svg/icon-lamb-sprite.svg);
  background-repeat: no-repeat;
  background-size: var(--bg-width) var(--height);
  width: var(--width);
  height: var(--height);
  animation: loading-logo 1.5s steps(var(--count)) 0.2s infinite;
}

@keyframes loading-logo {
  to { background-position: calc(-1 * 34px * 8 * 14) 0; }
}

.bl-title {
  aspect-ratio: 343/70;
  background-image: url(/svg/title.svg);
  background-repeat: no-repeat;
  background-size: contain;
}


.scroll-down-mouse svg path#line {
  transition: d 0.3s ease-out;
}
.scroll-down-mouse:hover svg path#line {
  d: path("M10.999 32.353L10.999 0.945171");
}

.slick-slider {
  @apply grid !important;
}
.slick-list {
  @apply order-2 !important;
}
.slick-dots {
  @apply relative bottom-0 order-1 mb-6 flex justify-between gap-4 sm:justify-start md:mb-10 md:gap-4 !important;
}
.slick-dots li {
  @apply m-0 h-4 w-4 list-none rounded-full border border-solid border-gray-50 bg-transparent transition-all !important;
}
.slick-dots li.slick-active {
  @apply w-8 border-primary-500 bg-primary-500 !important;
}
.slick-dots li button {
  @apply m-0 h-full w-full rounded-full p-0 focus:ring-4 !important;
}
.slick-dots li button::before {
  @apply content-none !important;
}
.slick-track {
  @apply flex gap-2 !important;
}
.slick-prev,
.slick-next {
  @apply h-full opacity-0 hover:bg-[var(--bg-secondary)] hover:opacity-100 focus:bg-[var(--bg-secondary)] focus:opacity-100 focus:ring transition-all rounded-full !important;
  background: url(/svg/arrow-right-small.svg) 100% no-repeat !important;
  background-size: contain !important;
}
.slick-prev {
  @apply top-0 scale-x-[-1] !important;
}
.slick-prev:before,
.slick-next:before {
  @apply content-none !important;
}

@keyframes logo {
  to { background-position: -476px 0; }
}

.logo {
  display: flex;
  width: 34px;
  height: 26px;
  background-image: url("/svg/icon-lamb-sprite.svg");
  background-size: 476px 26px;
}

.logo:hover {
  background-image: url("/svg/icon-lamb-sprite-primary.svg");
  animation: logo 1.5s steps(14) infinite;
}

@keyframes icon-surface {
  to { background-position: -350px; }
}
.icon-surface {
  display: flex;
  width: 35px;
  height: 34px;
  background-image: url("/svg/icon-surface-sprite.svg");
  background-size: 350px 34px;
}
.icon-surface:hover {
  animation: icon-surface 1s steps(10) infinite;
}

@keyframes icon-cube {
  to { background-position: -320px; }
}
.icon-cube {
  display: flex; 
  width: 32px;
  height: 34px;
  background-image: url("/svg/icon-cube-sprite.svg");
  background-size: 320px 34px;
}
.icon-cube:hover {
  animation: icon-cube 1s steps(10) infinite;
}
@keyframes icon-globe {
  to { background-position: -320px; }
}
.icon-globe {
  display: flex; 
  width: 32px;
  height: 34px;
  background-image: url("/svg/icon-globe-sprite.svg");
  background-size: 320px 34px;
}
.icon-globe:hover {
  animation: icon-globe 1s steps(10) infinite;
}
@keyframes icon-bezier {
  to { background-position: -320px; }
}
.icon-bezier {
  display: flex; 
  width: 32px;
  height: 34px;
  background-image: url("/svg/icon-bezier-sprite.svg");
  background-size: 320px 34px;
}
.icon-bezier:hover {
  animation: icon-bezier 1s steps(10) infinite;
}

summary::-webkit-details-marker {
  display: none;
}

